# spacetrack

./: .coveragerc  .gitlab-ci.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  conftest.py  dev-requirements.txt  docs-requirements.txt  noxfile.py  pyproject.toml  readthedocs-requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  python-publish.yml
.travis/: upload_coverage.sh
docs/: changelog.rst  conf.py  index.rst  installation.rst  module.rst  requirements.txt  spelling_wordlist.txt  usage.rst
docs/_static/: style.css
docs/modules/: aio.rst  base.rst  operators.rst
shovel/: _helpers.py  docs.py  test.py
spacetrack/: __init__.py  aio.py  base.py  operators.py
src/spacetrack/: __init__.py  aio.py  base.py  operators.py
tests/: conftest.py  test_aio.py  test_operators.py  test_spacetrack.py
