[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetrack"
version = "1.3.1"
description = "Python client for space-track.org"
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "filelock>=3.17.0",
    "httpx>=0.28.1",
    "logbook>=1.8.0",
    "outcome>=1.3.0.post0",
    "platformdirs>=4.3.6",
    "python-dateutil>=2.9.0.post0; python_version < '3.11'",
    "represent>=2.1",
    "rush>=2021.4.0",
    "sniffio>=1.3.1",
]

[project.urls]
Repository = "https://github.com/python-astrodynamics/spacetrack"
Documentation = "https://spacetrack.readthedocs.io"

[dependency-groups]
dev = [
    { include-group = "coverage" },
    { include-group = "nox" },
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-trio>=0.8.0",
    "respx>=0.22.0",
    "ruff==0.9.7",
]
docs = [
    "furo>=2024.8.6",
    "parver>=0.5",
    "sphinx>=7.4.7",
]
docstest = [
    { include-group = "docs" },
    "doc8>=1.1.2",
]
coverage = [
    "coverage[toml]>=7.6.12",
]
nox = [
    "nox>=2025.2.9",
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["spacetrack", "tests/"]
parallel = true

[tool.coverage.paths]
source = ["src/spacetrack", ".tox/**/site-packages/spacetrack"]

[tool.coverage.report]
precision = 1
exclude_lines = ["pragma: no cover", "^\\s*pass\\s*$"]

[tool.pytest.ini_options]
addopts = "-r s"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # ruff defaults
    "I", # isort
    "UP", # pyupgrade
]

[tool.doc8]
ignore-path = ["docs/_build", "docs/requirements.txt"]
